# cardputer-mesh

./: .gitignore  README.md  midnight-city.txt
.github/workflows/: pages.yml
cyd-terminal/: platformio.ini
cyd-terminal/src/: font6x12.h  main.cpp
docs/: ARCHITECTURE.md  CYBERHACK.md  MIDNIGHT_CITY.md  MIDNIGHT_CITY_TESTING.md  WIKI.md
emulator/: .gitignore  Makefile  README.md
emulator/sim/: cyberhack_sim.cpp  midnight_sim.cpp
emulator/src/apps/: apps.cpp  apps.h  calc.cpp  calcurse.cpp  channels.cpp  clock.cpp  contacts.cpp  cyberhack.cpp  editor.cpp  files.cpp  journal.cpp  meshstatus.cpp  midnight.cpp  presets.cpp  search.cpp  settings.cpp  system.cpp  timer.cpp  wiki.cpp  wizard.cpp
emulator/src/core/: ansi.cpp  ansi.h  app.cpp  app.h  clipboard.h  cyberhack_world.cpp  cyberhack_world.h  eval.cpp  eval.h  fs.h  input.h  lora_phy.cpp  lora_phy.h  mesh.h  meshtastic_frame.cpp  meshtastic_frame.h  midnight_world.cpp  midnight_world.h  notification_center.cpp  notification_center.h  persist.h  settings.cpp  settings.h  stub_mesh.cpp  stub_mesh.h  text_canvas.cpp  text_canvas.h  ui_kit.cpp  ui_kit.h  wallclock.cpp  wallclock.h  wiki.h
emulator/src/host/: bridge_mesh.cpp  bridge_mesh.h  file_store.cpp  file_store.h  file_system_unix.cpp  file_system_unix.h  host_unix.cpp  host_unix.h  main.cpp  mesh_bridge.py  sqlite_wiki.cpp  sqlite_wiki.h
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  main.cpp  sqlite3_esp32.c  sqlite_compat.c
firmware/main/device/: battery.h  builtin_display.h  cardputer_keyboard.h  nvs_store.h  pkc.h  radio_mesh.h  sd_fs.h  sdcard.h  uart_terminal.h
firmware/main/device/radio/: radio_interface.h  sx1262.cpp  sx1262.h
firmware/main/stubs/: stub_seams.h
tools/: fetch_sqlite.sh  fetch_wiki.sh  publish_wiki.sh  slim_wiki.sh
web/: README.md  build.sh  cyberhack_wasm.cpp  index.html
